--- a/M1U3/estilo.css
+++ b/M1U3/estilo.css
@@ -1,18 +1,20 @@
-*{box-sizing: border-box;
+*{
+    box-sizing: border-box;
+    margin:0;
   
  }
 
 
 body{
+    
     background-color: rgb(197, 197, 193);
     font-family:'Times New Roman', Times, serif;
-
-
+ 
 }
 
 
 .titulo{
-        width: 80%;
+        
         text-align: center;
         font-size: 40px;
     
@@ -20,33 +22,45 @@ body{
 }
 
 img {
-    margin:80px 40px;
-    border: 0.5px solid  rgb(0, 0, 0);}
+    
+    margin:80px 70px;
+    border: 0.5px solid  rgb(0, 0, 0);
+}
+    
 
 .datos{
     
-    display: inline-block;
-    
+   float: right;
+   position:absolute;
+   top: 120PX;
+   left: 310px;
+   z-index: 1;
+
+   
+   }
+   
+   h3, ul {
+    margin: 20px;
 }
+
+
+   
+   
+
 .perfil{ 
+        
         width: 80%;
+        
+        margin-left: 70px;
+       
+       
         padding-top: 20px;
+        
+       
     }
 
         
-.imagenflex{
-    
-    margin: 5px;
-    
-    
-}
 
-.imagenesflex{ 
-    
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content:flex-start;
     
 
 
@@ -54,7 +68,7 @@ img {
     
    
  
-}
+
 
 
 
